syntax = "proto3";

package dhpcs.liquidity.actor.protocol.zonevalidator;

option java_package = "com.dhpcs.liquidity.proto.actor.protocol.zonevalidator";

import "dhpcs/liquidity/model.proto";
import "dhpcs/liquidity/ws-protocol.proto";

message GetZoneStateCommand {
    string zone_id = 1;
}

message GetZoneStateResponse {
    dhpcs.liquidity.model.ZoneState state = 1;
}

message ZoneCommandEnvelope {
    string zone_id = 1;
    bytes remote_address = 2;
    bytes public_key = 3;
    int64 correlation_id = 4;
    int64 sequence_number = 5;
    int64 delivery_id = 6;
    dhpcs.liquidity.ws.protocol.ZoneCommand command = 7;
}

message ZoneCommandReceivedConfirmation {
    string zone_id = 1;
    int64 delivery_id = 2;
}

message ZoneResponseEnvelope {
    int64 correlation_id = 1;
    int64 sequence_number = 2;
    int64 delivery_id = 3;
    dhpcs.liquidity.ws.protocol.ZoneResponse response = 4;
}

message ZoneNotificationEnvelope {
    string zone_id = 1;
    int64 sequence_number = 2;
    int64 delivery_id = 3;
    dhpcs.liquidity.ws.protocol.ZoneNotification notification = 4;
}
